Create: Create custom range slider
Will Create custom 'rangeSlide' and plug styles for him

--- a/src/containers/Accordion/style.module.scss
+++ b/src/containers/Accordion/style.module.scss
@@ -9,7 +9,8 @@
 
 .accordionBody {
     position: absolute;
-    transform: translate(-12.5%, 10%);
+    top: 100%;
+    left: 0;
     width: 100%;
 }
 
