Create: redux store, components: footer, RangeSlider
You will need to create: redux store, components: footer, RangeSlider.

--- a/src/pages/main/components/Category/style.module.scss
+++ b/src/pages/main/components/Category/style.module.scss
@@ -27,7 +27,7 @@
 
   &:last-child {
     margin-right: 0;
-    padding: rem(15) rem(20);
+    // padding: rem(15) rem(20);
 
     ul {
       left: 0%;
@@ -39,67 +39,41 @@
     @extend %mainColor;
   }
 
-  &:first-child {
-    background-color: transparent;
+  background-color: transparent;
 
-    ul {
-      position: relative;
-      width: 100%;
-
-      li {
-        background-color: transparent;
-        padding: rem(10);
-
-        &:hover {
-          background: transparent;
-
-          p {
-            background: linear-gradient(
-              95.25deg,
-              #c09e6c -5.68%,
-              #ffebcc 41.36%,
-              #bf936b 104.69%
-            );
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-          }
-        }
-      }
-    }
-
-    > div {
-      border: 1px solid rgba(214, 184, 141, 1);
-      padding: rem(13.5) rem(20);
-      max-width: rem(285);
-      width: 100%;
-      border-radius: 4px;
-      position: relative;
-      display: flex;
-      align-items: center;
-      background-color: rgba(54, 51, 46, 1);
-      margin-bottom: rem(20);
-
-      &::after {
-        content: "";
-        display: block;
-        width: 40px;
-        height: 40px;
-        background: url("../../../../assets/imgs/Category/icon-category.svg");
-        position: absolute;
-        top: 0;
-        right: 20px;
-      }
-    }
-
+  >div {
+    border: 1px solid rgba(214, 184, 141, 1);
+    padding: rem(13.5) rem(20);
+    width: 100%;
+    max-width: rem(285);
+    border-radius: 4px;
+    position: relative;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    background-color: rgba(54, 51, 46, 1);
+    margin-bottom: rem(20);
+
+    &::after {
+      content: "";
+      display: block;
+      width: 40px;
+      height: 40px;
+      background: url("../../../../assets/imgs/Category/icon-category.svg");
+      position: absolute;
+      top: 0;
+      right: 20px;
+    }
   }
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.selectItemFilter > div {
+.selectItemFilter>div {
   font-size: rem(18);
   line-height: em(22, 18);
+
   img {
     order: 2;
   }
@@ -111,8 +85,9 @@
 }
 
 .selectItemFilter {
-  > div {
+  >div {
     margin-bottom: rem(10);
+
     &::after {
       content: "";
       display: block;
@@ -123,4 +98,99 @@
       margin-right: rem(17);
     }
   }
+}
+
+.selectFilter {
+  ul {
+    position: relative;
+    width: 100%;
+    top: 0;
+
+    li {
+      background-color: transparent;
+      padding: rem(10);
+
+      &:hover {
+        background: transparent;
+
+        p {
+          background: linear-gradient(95.25deg,
+              #c09e6c -5.68%,
+              #ffebcc 41.36%,
+              #bf936b 104.69%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
+      }
+    }
+  }
+}
+
+.selectPopular {
+  align-self: flex-start;
+  margin: 0 0 rem(20) 0;
+
+  >div {
+    margin-bottom: 0;
+    max-width: initial;
+  }
+
+  ul {
+    position: absolute;
+    top: 100%;
+
+    li {
+      background-color: rgba(43, 40, 37, 1);
+      padding: rem(12) rem(30);
+    }
+
+    &:hover {
+      background: linear-gradient(95.25deg, #C09E6C -5.68%, #FFEBCC 41.36%, #BF936B 104.69%);
+
+      p {
+        background-color: rgba(60, 52, 40, 1);
+      }
+    }
+  }
+}
+
+.btnReset {
+  padding: rem(15) rem(20);
+  border-radius: 4px;
+  background-color: rgba(54, 51, 46, 1);
+  width: 100%;
+  text-align: left;
+  position: relative;
+
+  span {
+    @extend %mainColor;
+    font-size: rem(18);
+    line-height: em(22, 18);
+  }
+
+  &::after {
+    content: '';
+    display: block;
+    width: 40px;
+    height: 40px;
+    background: url('../../../../assets/imgs/global/close.svg') no-repeat;
+    position: absolute;
+    top: 50%;
+    right: rem(20);
+    transform: translateY(-50%);
+  }
+}
+
+.bodyFilter {
+  display: grid;
+  grid-template-columns: rem(305) 1fr;
+  column-gap: rem(20);
+}
+
+.bodyGoods {
+  grid-column: span 2;
+}
+
+.filter {
+  flex-direction: column;
 }
