--- a/src/pages/main/components/GiftBonus/style.module.scss
+++ b/src/pages/main/components/GiftBonus/style.module.scss
@@ -19,7 +19,7 @@
 }
 
 .container{
-    padding: rem(50) 0 rem(60) 0;
+    padding: rem(50) 0 rem(60) rem(108);
     position: relative;
     z-index: 1;
 }
