--- a/src/components/api/Checkbox/styles.module.scss
+++ b/src/components/api/Checkbox/styles.module.scss
@@ -1,5 +1,5 @@
 
-@import '../../../../utils/utilsStyles/rem.scss';
+@import '../../../utils/utilsStyles/rem.scss';
 
 .chackbox{
     width: rem(24);
