--- a/src/components/api/RangeSlider/style.module.scss
+++ b/src/components/api/RangeSlider/style.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../utils/utilsStyles/rem.scss';
+@import '../../../utils/utilsStyles/rem.scss';
 
 .rangeSlider {
   position: relative;
