--- a/src/utils/utilsStyles/colors.scss
+++ b/src/utils/utilsStyles/colors.scss
@@ -1,5 +1,11 @@
-
-
 $colors: (
-    
+    'jet': rgb(54, 51, 46),
+    'blanchedAlmond': rgb(255, 235, 204),
+    'shadow': rgb(134, 122, 104),
+    "vanilla": rgb(190, 174, 151),
+    'almostBlack': rgba(18, 17, 15, 1),
+    'tan': rgba(214, 184, 141, 1),
+    'taupe': rgba(184, 164, 142, 0.4),
+    'gradientMain': linear-gradient(92.38deg, #C09E6C -1.94%, #FFEBCC 40.99%, #BF936B 98.79%),
+    'darkCoffe': rgba(43, 40, 37, 1),
 );
