--- a/src/utils/utilsStyles/colors.scss
+++ b/src/utils/utilsStyles/colors.scss
@@ -6,6 +6,10 @@ $colors: (
     'almostBlack': rgba(18, 17, 15, 1),
     'tan': rgba(214, 184, 141, 1),
     'taupe': rgba(184, 164, 142, 0.4),
+    'taupeExtra': rgba(183, 160, 139, 1),
     'gradientMain': linear-gradient(92.38deg, #C09E6C -1.94%, #FFEBCC 40.99%, #BF936B 98.79%),
+    'gradientExtraMain': linear-gradient(105.38deg, #C09E6C -52.03%, #FFEBCC 32.11%, #BF936B 145.38%),
     'darkCoffe': rgba(43, 40, 37, 1),
+    'darkExtra': rgba(33, 30, 28, 1),
+    'dark': rgba(14, 13, 12, 1),
 );
