--- a/src/components/api/Pagination/style.module.scss
+++ b/src/components/api/Pagination/style.module.scss
@@ -1,26 +1,7 @@
+@use 'sass:map';
 @import '../../../utils/utilsStyles/rem.scss';
 @import '../../../utils/utilsStyles/em.scss';
-
-.item {
-    padding: rem(10) rem(18);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgba(190, 174, 151, 1);
-    font-size: rem(14);
-    line-height: em(14, 17);
-    border-radius: rem(4);
-
-    &:hover {
-        color: rgba(54, 51, 46, 1);
-        background-color: rgba(183, 160, 139, 1);
-    }
-}
-
-.activePagination {
-    background-color: rgba(183, 160, 139, 1);
-    color: rgba(54, 51, 46, 1);
-}
+@import '../../../utils/utilsStyles/colors.scss';
 
 .wrapper {
     display: flex;
@@ -33,15 +14,15 @@
 .btn {
     width: 36px;
     height: 36px;
-    border: 1px solid rgba(192, 158, 108, 1);
+    border: 1px solid map.get($colors, 'vanilla');
     background-color: transparent;
     border-radius: rem(6);
     position: relative;
 }
 
 .disabled {
-    background-color: rgba(51, 46, 39, 1);
-    border: 1px solid rgba(51, 46, 39, 1);
+    background-color: map.get($colors, 'jet');
+    border: 1px solid map.get($colors, 'jet');
 }
 
 .btnPrev.disabled {
