--- a/src/pages/main/components/Category/style.scss
+++ b/src/pages/main/components/Category/style.scss
@@ -4,4 +4,10 @@
      padding: rem(10) 0;
      background-color: rgba(33, 30, 28, 1);
      box-shadow: 0px 9px 15px 0px rgba(116, 107, 90, 0.41);
+     >ul{
+          padding-top: rem(20);
+     }
 }
+
+
+@import './media.scss';
