--- a/src/pages/main/components/GiftBonus/style.module.scss
+++ b/src/pages/main/components/GiftBonus/style.module.scss
@@ -1,12 +1,14 @@
+@use 'sass:map';
 @import '../../../../utils/utilsStyles/rem.scss';
 @import '../../../../utils/utilsStyles/em.scss';
 @import '../../../../utils/utilsStyles/mixinBtn.scss';
 @import '../../../../utils/utilsStyles/mainColor.scss';
+@import '../../../../utils/utilsStyles/colors.scss';
 
 .GiftBonus{
     width: 100%;
     height: 100%;
-    color: rgba(225, 211, 189, 1);
+    color: map.get($colors, 'blanchedAlmond');
     position: relative;
 }
 
@@ -35,7 +37,10 @@
 
 .btn{
     @include mixinBtn(12, 31);
+    display: inline-block;
      span{
         @extend %mainColor;
      }
 }
+
+@import './media.scss';
