--- a/src/pages/main/components/Offer/style.module.scss
+++ b/src/pages/main/components/Offer/style.module.scss
@@ -1,12 +1,14 @@
+@use 'sass:map';
 @import '../../../../utils/utilsStyles/rem.scss';
 @import '../../../../utils/utilsStyles/mainColor.scss';
 @import '../../../../utils/utilsStyles/em.scss';
 @import '../../../../utils/utilsStyles/mixinBtn.scss';
+@import '../../../../utils/utilsStyles/colors.scss';
 
 .offer{
   width: 100%;
   height: 100%;
-  background-color: rgba(43, 40, 37, 1);
+  background-color: map.get($colors, 'darkCoffe');
   padding-top: rem(50);
   padding-bottom: rem(30);
 }
@@ -20,18 +22,6 @@
     display: flex;
     gap: rem(25);
     margin-bottom: rem(50);
-}
-
-.item{
-    position: relative;
-}
-
-.text{
-    color: rgba(225, 211, 189, 1);
-    font-size: rem(20);
-    line-height: em(24.38, 20);
-    font-weight: 700;
-    margin-bottom: rem(10);
 }
 
 .content{
