--- a/src/styles/style.module.scss
+++ b/src/styles/style.module.scss
@@ -1,6 +1,7 @@
 @import "./Null.scss";
 @import "../utils/utilsStyles/rem.scss";
 @import "../utils/utilsStyles/em.scss";
+@import "../utils/utilsStyles/mainColor.scss";
 
 // PLUG FONTS
 
@@ -32,8 +33,18 @@ body {
     text-align: left;
 }
 
+.title {
+    // font-family: Montserrat;
+    font-size: rem(30);
+    font-weight: 400;
+    line-height: em(36.57, 30);
+    @extend %mainColor;
+}
+
+
 .bodyInput {
     position: relative;
+
     input {
         padding: rem(14) rem(20);
         flex: 1 1 auto;
@@ -63,6 +74,6 @@ body {
     font-weight: 400;
     line-height: em(25.2, 18);
     text-align: left;
-    }
+}
 
 @import "./media.scss";
