--- a/src/utils/utilsStyles/colors.scss
+++ b/src/utils/utilsStyles/colors.scss
@@ -12,4 +12,6 @@ $colors: (
     'darkCoffe': rgba(43, 40, 37, 1),
     'darkExtra': rgba(33, 30, 28, 1),
     'dark': rgba(14, 13, 12, 1),
+    'warmDark': rgba(122, 115, 100, 1),
+    'warmGray': rgba(95, 87, 76, 1),
 );
